<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercise1</string>
    <string name="action_settings">Settings</string>
    <string name="title">Center Title</string>
	<string name="avatar">Avatar</string>
    <string name="footer">Footer: One Two Three Four Five Six Seven Eighth</string>
    <string name="username">Username</string>
    <string name="description">Description: One Two Three Four Five Six Seven Eighth Nine Ten</string>
    <string name="perfil">Perfil View</string>
    <string name="info">Load Info</string>
    <string name="update">Update</string>
    <string name="locate">Locate</string>

</resources>